@@ -1,11 +1,15 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="plone.z3cform">
 
   <include package="z3c.form" file="meta.zcml" />
   <include package="z3c.form" />
+
+  <include package=".textlines" file="textlines.zcml"
+    zcml:condition="not-installed z3c.form.browser.textlines"/>
 
   <includeOverrides file="overrides.zcml" />
   <include file="templates.zcml" />
