@@ -1,0 +1,33 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:z3c="http://namespaces.zope.org/z3c"
+    i18n_domain="z3c.form">
+
+  <class class=".textlines.TextLinesWidget">
+    <require
+        permission="zope.Public"
+        interface="plone.z3cform.textlines.textlines.ITextLinesWidget"
+        />
+  </class>
+
+  <!-- this widget is not configured for any field by default -->
+
+  <z3c:widgetTemplate
+      mode="display"
+      widget="plone.z3cform.textlines.textlines.ITextLinesWidget"
+      layer="z3c.form.interfaces.IFormLayer"
+      template="textlines_display.pt"
+      />
+
+  <z3c:widgetTemplate
+      mode="input"
+      widget="plone.z3cform.textlines.textlines.ITextLinesWidget"
+      layer="z3c.form.interfaces.IFormLayer"
+      template="textlines_input.pt"
+      />
+      
+  <adapter
+      factory=".textlines.TextLinesConverter"
+      />
+
+</configure>
